<resources>
    <string name="app_name">Final Project</string>
    <string name="title">Mobile Development Final Project</string>
    <string name="Pexels">Pexels</string>
    <string name="OwlbotDic">OwlbotDic</string>
    <string name="CocktailDB">CocktailDB</string>
    <string name="FoodNutrition">FoodNutrition</string>
    <string name="cocktail">Cocktail Database</string>
    <string name="food">Food Nutrition Database</string>
    <string name="owlbot">Owlbot Dictionary</string>
    <string name="homepage">Home</string>
    <string name="open">Drawer open</string>
    <string name="close">Drawer close</string>
    <string name="help">Help</string>
    <string name="HelpTile">Pexels Help</string>
    <string name="pexelsInstructions1">* Do something</string>
    <string name="pexelsInstructions2">* Do something</string>
    <string name="pexelsInstructions3">* Do something</string>
    <string name="pexelsInstructions4">* Do something</string>
    <string name="pexelsInstructions5">* Do something</string>
    <string name="closeHelpDialog">Close</string>
    <string name="acivity_info">Activity Info</string>
    <string name="activity_pexels_name">Title: Pexels</string>
    <string name="activity_pexels_author">Author: Weixin You</string>
    <string name="activity_pexels_version">Version Number: 1.0</string>
    <string name="displaydata">Pexels Display Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_details">Photo Details</string>
</resources>