<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/go_pexels"
        android:title="@string/Pexels"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item
        android:id="@+id/go_cocktail"
        android:title="@string/cocktail"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item
        android:id="@+id/go_food"
        android:title="@string/food"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_owlbot"
        android:title="@string/owlbot"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item
        android:id="@+id/go_homepage"
        android:title="@string/homepage"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item android:id="@+id/helpItem"
        android:title="@string/help"
        android:orderInCategory="60"
        app:showAsAction="ifRoom" />
</menu>