<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/item1"
        android:icon="@drawable/homepage"
        android:orderInCategory="1"
        android:title="@string/homepage"
        app:showAsAction="always" />

    <item android:id="@+id/item2"
        android:icon="@drawable/cocktail"
        android:orderInCategory="2"
        android:title="@string/CocktailDB"
        app:showAsAction="always" />

    <item android:id="@+id/item3"
        android:icon="@drawable/food"
        android:orderInCategory="3"
        android:title="@string/FoodNutrition"
        app:showAsAction="always" />

    <item android:id="@+id/item4"
        android:icon="@drawable/owl"
        android:orderInCategory="4"
        android:title="@string/OwlbotDic"
        app:showAsAction="always" />

    <item android:id="@+id/item5"
        android:icon="@drawable/pixel"
        android:orderInCategory="5"
        android:title="@string/Pexels"
        app:showAsAction="always" />



</menu>