<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/projectLayout"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:textSize="25dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:text="@string/title" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:id="@+id/centerImg"
        android:visibility="invisible" />

    <Button
        android:id="@+id/pexelsBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_toLeftOf="@+id/centerImg"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/Pexels"
        android:textSize="12dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/owlbotDictBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/centerImg"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/OwlbotDic"
        android:textSize="12dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/cocktailDbBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_toRightOf="@+id/centerImg"
        android:layout_centerVertical="true"
        android:layout_marginTop="21dp"
        android:textAlignment="center"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:text="@string/CocktailDB"
        android:textStyle="bold" />

    <Button
        android:id="@+id/foodNutriBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/centerImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/FoodNutrition"
        android:textSize="12dp"
        android:textStyle="bold" />

</RelativeLayout>